--- a/templates/app/campaign/sequence.html
+++ b/templates/app/campaign/sequence.html
@@ -234,7 +234,11 @@
             
             <!-- Actions -->
             <div class="modal-action mt-2">
+                {% if not all_messages %}
+                    <button class="btn btn-primary" onclick="window.location.href = '{% url 'messages_add' %}';">Create Message</button>
+                {% else %}
                 <button class="btn btn-primary" onclick="AssignMessage2Sequence({{campaign_id}})">Assign</button>
+                {% endif %}
                 <form method="dialog">
                     <button class="btn btn-ghost">Cancel</button>
                 </form>
